--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "^48.0.0",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.23.0",
     "formik": "^2.4.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
