--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "expo": "^48.0.0",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
@@ -21,7 +23,11 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-bcrypt": "^2.4.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
+    "react-native-randombytes": "^3.6.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "reactnative": "^0.0.0",
