--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@iconify/icons-mdi": "^1.2.47",
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
@@ -16,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "expo": "^48.0.0",
+    "expo-checkbox": "~2.3.1",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
@@ -25,6 +28,8 @@
     "react-native": "0.71.8",
     "react-native-bcrypt": "^2.4.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-iconify": "^0.2.10",
+    "react-native-image-picker": "^5.6.1",
     "react-native-paper": "^5.8.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "4.5.0",
@@ -37,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@iconify/react": "^4.1.1",
     "tailwindcss": "^3.3.2"
   },
   "private": true
