--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-paper": "^5.8.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "reactnative": "^0.0.0",
