--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -28,17 +29,20 @@
     "formik": "^2.4.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.13",
     "react-native-bcrypt": "^2.4.0",
+    "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-iconify": "^0.2.10",
     "react-native-image-picker": "^5.6.1",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.8.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
+    "react-native-toast-message": "^2.1.6",
     "reactnative": "^0.0.0",
     "styled-components": "^6.0.0-rc.3",
     "tailwindcss-react-native": "^1.7.10",
